Oval rewrite